trying to fix spacing between home and about sections on different size screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -281,6 +281,15 @@ main #home {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+@media screen and (min-width: 501px) and (max-width: 767px) {
+  #about {
+    margin-top: calc(50px);
+  }
+
+  #home {
+    height: 100vh;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   #about, #projects, #contact {
     margin-bottom: 3vh;
@@ -343,7 +352,7 @@ main #home {
     background-color: #1f1f21;
   }
 }
-@media screen and (min-width: 375px) and (max-width: 767px) {
+@media screen and (min-width: 375px) and (max-width: 500px) {
   #home {
     height: calc(100vh + 50px);
   }
